Implementação da visão detalhes, assim como Action por método GET dentro do Controller

--- a/Asp_Net_MVC_5/Views/Categorias/Index.cshtml
+++ b/Asp_Net_MVC_5/Views/Categorias/Index.cshtml
@@ -30,7 +30,7 @@
             </td>
             <td>
                 @Html.ActionLink("Editar", "Edit", new { id=item.CategoriaId }) |
-                @Html.ActionLink("Detalhes", "Detail", new { id=item.CategoriaId }) |
+                @Html.ActionLink("Mais detallhes", "Details", new { id=item.CategoriaId }) |
                 @Html.ActionLink("Deletar", "Delete", new { id=item.CategoriaId })
             </td>
         </tr>
